// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple children 1`] = `
  () => {
    return (
      <div>
        <div>Foo</div>
        <div>Bar</div>
      </div>
    );
  };
`;

exports[`nested style 1`] = `
  () => {
    return <div className="element_5ae">Hello World</div>;
  };
  
  css(\`
  	.element_5ae {
  		color: red;
  	}
  \`);
`;

exports[`style 1`] = `
  const App = () => {
    return <div className="App_8dv">Hello World</div>;
  };
  
  css(\`
  	.App_8dv {
  		color: red;
  	}
  \`);
`;
